service-node-koa/infrastructure/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-redline-api
  labels:
    app: redline-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: redline-api
  template:
    metadata:
      labels:
        app: redline-api
    spec:
      containers:
        - name: redline-api
          image: ghcr.io/sombriks/redline/redline-api:2023.12.29-c435e7e
          ports:
            - containerPort: 3000
