service-node-koa/infrastructure/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-redline-api
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - api.redline.sombriks.org
      secretName: letsencrypt-prod # secret name, same as the privateKeySecretRef in the (Cluster)Issuer
  rules:
    - host: api.redline.sombriks.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service-redline-api
                port:
                  number: 3000
